--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,14 @@
-.App {
-  text-align: center;
+.navbar {
+  background-color: gray;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.navbar-nav{
+  list-style: none; 
+  margin: 0;
 }
-
-.App-header {
-  background-color: #222;
-  height: 100px;
-  padding: 20px;
+.navbar-nav li{
+  display: inline-block;  
+}
+.navbar-nav li a{
   color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  padding:0px 50px;
 }
